--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,68 @@
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'eclipse-wtp'
 
 repositories {
     mavenCentral()
 }
 dependencies {
-    compile "joda-time:joda-time:2.2"
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    compile 'joda-time:joda-time:2.2'
+    
 }
 jar {
     baseName = 'gs-gradle'
     version =  '0.1.0'
+}
+
+task copyJarDependencies(type: Copy) {
+    description = 'Used for Eclipse. Copies all dependencies to the libs directory. If there are any AAR files it will extract the classes.jar and rename it the same as the AAR file but with a .jar on the end.'
+    libDir = new File(project.projectDir, '/libs')
+    println libDir
+    println 'Adding dependencies from compile configuration'
+    configurations.compile.filter {it.name.endsWith 'jar'}.each { File file -> moveJarIntoLibs(file)}
+    println 'Adding dependencies from releaseCompile configuration'
+    configurations.releaseCompile.filter {it.name.endsWith 'jar'}.each { File file -> moveJarIntoLibs(file)}
+    println 'Adding dependencies from debugCompile configuration'
+    configurations.debugCompile.filter {it.name.endsWith 'jar'}.each { File file -> moveJarIntoLibs(file)}
+    println 'Adding dependencies from instrumentTestCompile configuration'
+    configurations.instrumentTestCompile.filter {it.name.endsWith 'jar'}.each { File file -> moveJarIntoLibs(file)}
+    println 'Extracting dependencies from compile configuration'
+    configurations.compile.filter {it.name.endsWith 'aar'}.each { File file -> moveAndRenameAar(file) }
+    println 'Extracting dependencies from releaseCompile configuration'
+    configurations.releaseCompile.filter {it.name.endsWith 'aar'}.each { File file -> moveAndRenameAar(file) }
+    println 'Extracting dependencies from debugCompile configuration'
+    configurations.debugCompile.filter {it.name.endsWith 'aar'}.each { File file -> moveAndRenameAar(file) }
+    println 'Extracting AAR dependencies from instrumentTestCompile configuration'
+    configurations.instrumentTestCompile.filter {it.name.endsWith 'aar'}.each { File file -> moveAndRenameAar(file) }
+}
+
+void moveJarIntoLibs(File file){
+    println 'Added jar ' + file
+        copy{
+            from file
+            into 'libs'
+        }
+}
+
+void moveAndRenameAar(File file){
+    println 'Added aar ' + file
+    def baseFilename = file.name.lastIndexOf('.').with {it != -1 ? file.name[0..<it] : file.name}
+
+    // directory excluding the classes.jar
+    copy{
+        from zipTree(file)
+        exclude 'classes.jar'
+        into 'libs/'+baseFilename
+    }
+
+    // Copies the classes.jar into the libs directory of the expoded AAR.
+    // In Eclipse you can then import this exploded ar as an Android project
+    // and then reference not only the classes but also the android resources :D 
+    copy{
+        from zipTree(file)
+        include 'classes.jar'
+        into 'libs/' + baseFilename +'/libs'
+        rename { String fileName ->
+            fileName.replace('classes.jar', baseFilename + '.jar')
+        }
+    }
 }
